Homepage-christensen-koh

--- a/index.html
+++ b/index.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 130 | Personal Homepage</title>
+    <title>Kemonaho Christensen Esaie KOH | WDD 130</title>
 </head>
-<body>
-    <h1>Welcome to WDD 130.</h1>
-    <p>This page will become your homepage for the course. You will remove this text and replace it with your own personal details.</p>
 
-    <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple.">
+<body>
+    <header>
+        <nav>
+            <a href="#">Home</a>
+            <a href="wwr/">Rafting Website</a>
+        </nav>
+    </header>
+
+    <main>
+        <h1>Kemonaho Christensen Esaie KOH | WDD 130</h1>
+        <img src="images/profile.jpg" alt="Christensen KOH" width="200">
+        <p>I am Christensen KOH, I am 29 years old, I am married and I have one child. My wife's
+            name is Maria and my son's name is James. We love Jesus-Christ and everybody.</p>
+    </main>
+
+    <footer>
+        <p>©2025 😎 Christensen KOH 😎 Abidjan, Cote D'Ivoire</p>
+    </footer>
 </body>
+
 </html>
