--- a/week02/basic-layout.html
+++ b/week02/basic-layout.html
@@ -1,11 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>placeholder</title>
+    <title>Basic HTML Structure</title>
+    <meta name="description" content="A basic HTML structure example using semantic HTML elements">
+    <meta name="author" content="Christensen KOH">
 </head>
+
 <body>
-    
+    <header>
+        <img src="images/basic-logo.png" alt="Homepage logo" width="128" height="128">
+    </header>
+
+    <nav>
+        <ul>
+            <li><a href="https://en.wikipedia.org/wiki/Le_Plateau,_Abidjan"> Headquarter</a></li>
+            <li><a
+                  href="https://www.govserv.org/CI/Abidjan/100682337991051/Mairie-de-la-commune-du-Plateau">Officers</a>
+            </li>
+        </ul>
+    </nav>
+
+    <main>
+        <h1>Basic HTML Structure</h1>
+        <section>
+            <h2>Heading</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, tenetur?</p>
+        </section>
+        <section>
+            <h2>Heading 2</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur fugit cumque animi
+                in ex aut dignissimos officiis illo similique nulla.</p>
+        </section>
+    </main>
+
+    <aside>
+        <img
+          src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/arequipa-peru/320x200/4-48661c257177c19a0f39a3991b1a7e7aa0338487.jpeg"
+          alt="Peru Temple, Arequipa" width="200">
+    </aside>
+
+    <footer>
+        <p>Christensen KOH</p>
+    </footer>
 </body>
+
 </html>
