--- a/index.html
+++ b/index.html
@@ -32,11 +32,12 @@
         <p>Cote d'Ivoire, is a country on the coast of western Africa comprised of four natural
             regions: a
             coastal fringe, an equatorial forest zone, a cultivated forest zone, and a northern
-            savanna. There
+            <!-- savanna. There  -->
             are more than 60 ethnic groups in Cote d’Ivoire, including the Akan, Northern Mande, and
             Gur.
             Agriculture is very important to Cote d’Ivoire, with cocoa beans as the main export,
-            making it the world’s leading cocoa bean producer.</p>
+            making it the world’s leading cocoa bean producer.
+        </p>
     </aside>
 
     <footer>
