--- a/wwr/about.html
+++ b/wwr/about.html
@@ -16,10 +16,13 @@
     <header>
         <img src="images/z-crossedoars.jpeg" alt="WWR logo">
         <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About Us</a>
-            <a href="trips.html">Trips</a>
-            <a href="cantact.html">Contact Us</a>
+            <ol>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="trips.html">Trips</a></li>
+                <li><a href="cantact.html">Contact Us</a></li>
+            </ol>
+
         </nav>
 
     </header>
@@ -51,16 +54,19 @@
     </main>
 
     <footer>
-        &#9827; &copy;| 2026 | White Water Rafting | Christensen KOH &#9827;
+        <p>&#9827; &copy;| 2026 | White Water Rafting | Christensen KOH &#9827;</p>
         <nav class="socialmedia">
-            <a href="facebook.com"></a>
-            <img src="images\facebook-square.svg" alt="Contact us on Facebook">
+            <a href="facebook.com">
+                <img src="images\facebook-square.svg" alt="Contact us on Facebook">
+            </a>
 
-            <a href="youtube.com"></a>
-            <img src="images\youtube.svg" alt="Visit our youtube channel">
+            <a href="youtube.com">
+                <img src="images\youtube.svg" alt="Visit our youtube channel">
+            </a>
 
-            <a href="whatsapp"></a>
-            <img src="images/whatsapp.svg" alt="Contact us on Whatsapp">
+            <a href="whatsapp">
+                <img src="images/whatsapp.svg" alt="Contact us on Whatsapp">
+            </a>
         </nav>
     </footer>
 </body>
