--- a/wwr/about.html
+++ b/wwr/about.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About us</title>
-    <meta
-      description="This part of the page gives some information about our company and services. It also provides contacts and special offers.">
-    <meta author="Kemonaho Christensen Esaie KOH">
+    <meta name="description"
+      content="This part of the page gives some information about our company and services. It also provides contacts and special offers.">
+    <meta name="author" content="Kemonaho Christensen Esaie KOH">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 
@@ -29,7 +29,7 @@
 
     <main>
         <div class="hero">
-            <img src="images\hero.webp" alt="Heroes of WWR">
+            <img src="images\rafting.jpg" alt="Heroes of WWR">
             <h1>White Water Rafting</h1>
             <article>
                 <img src="images\happy-costumer.avif" alt="Happy costumers in action">
@@ -54,7 +54,8 @@
     </main>
 
     <footer>
-        <p>&#9827; &copy;| 2026 | White Water Rafting | Christensen KOH &#9827;</p>
+        <p> &#9827; &copy;| 2026 | White Water Rafting | Christensen KOH &#9827; </p>
+
         <nav class="socialmedia">
             <a href="facebook.com">
                 <img src="images\facebook-square.svg" alt="Contact us on Facebook">
