--- a/wwr/about.html
+++ b/wwr/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About us</title>
     <meta name="description"
-      content="This part of the page gives some information about our company and services. It also provides contacts and special offers.">
+      content="This part of the page gives some information about our company and services.">
     <meta name="author" content="Kemonaho Christensen Esaie KOH">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
@@ -29,10 +29,10 @@
 
     <main>
         <div class="hero">
-            <img src="images\rafting.jpg" alt="Heroes of WWR">
+            <img src="images/rafting.jpg" alt="Heroes of WWR">
             <h1>White Water Rafting</h1>
             <article>
-                <img src="images\happy-costumer.avif" alt="Happy costumers in action">
+                <img src="images/happy-costumer.avif" alt="Happy costumers in action">
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis officia
                     expedita, nihil magni quidem culpa ipsam fugiat voluptates minus laudantium quod
                     illo numquam corporis animi tempore non? Doloremque, quis ut.</p>
@@ -58,11 +58,11 @@
 
         <nav class="socialmedia">
             <a href="facebook.com">
-                <img src="images\facebook-square.svg" alt="Contact us on Facebook">
+                <img src="images/facebook-square.svg" alt="Contact us on Facebook">
             </a>
 
             <a href="youtube.com">
-                <img src="images\youtube.svg" alt="Visit our youtube channel">
+                <img src="images/youtube.svg" alt="Visit our youtube channel">
             </a>
 
             <a href="whatsapp">
