--- a/wwr/about.html
+++ b/wwr/about.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About us</title>
-    <meta name="description"
-      content="Whitewater rafting is a type of recreation that involves navigating a non-motorized watercraft down free flowing rivers.">
+    <meta name="description" content="Whitewater rafting is an active type of recreation.">
     <meta name="author" content="Kemonaho Christensen Esaie KOH">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
