about us updated again

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -38,17 +38,51 @@
             </article>
         </div>
 
-        <section>
+        <section class="history">
             <h2>History</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim eligendi modi,
-                facilis maxime sequi architecto iusto. Laborum illum soluta placeat accusamus ut
-                earum, iure impedit iusto consectetur sint alias quam?</p>
+            <div class="history-content">
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim eligendi modi,
+                    facilis maxime sequi architecto iusto. Laborum illum soluta placeat accusamus ut
+                    earum, iure impedit iusto consectetur sint alias quam?</p>
+
+                <img src="images/history.jpg" alt="HIstory of White Water Rafting">
+
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit in, sit
+                    sequi facere unde rerum aut odio fuga! Nulla, temporibus quod animi error
+                    dolorum porro incidunt quia facere facilis deserunt?</p>
+            </div>
         </section>
 
-        <section>
+        <section class="adventure">
             <h2>Adventure Awaits You!</h2>
-        </section>
+            <div class="adventure-grid">
+                <figure>
+                    <img src="images/adventure-1.jpg" alt="Rafting Site 1">
+                    <figcaption>Path of rocks</figcaption>
+                </figure>
 
+                <figure>
+                    <img src="images/adventure-2.jpg" alt="Rafting Site 2">
+                    <figcaption>Watch out!</figcaption>
+                </figure>
+
+                <figure>
+                    <img src="images/adventure-3.jpg" alt="Rafting Site 3">
+                    <figcaption>Almost there</figcaption>
+                </figure>
+
+                <figure>
+                    <img src="images/adventure-4.jpg" alt="Rafting Site 4">
+                    <figcaption>Falling rocks path</figcaption>
+                </figure>
+
+                <figure>
+                    <img src="images/adventure-5.jpg" alt="Rafting Site 5">
+                    <figcaption>Golgotha</figcaption>
+                </figure>
+
+            </div>
+        </section>
     </main>
 
     <footer>
