--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
-    <meta name="description" content="Contact for any questions about WWR or services.">
+    <title>Contact Us | White Water Rafting California</title>
+    <meta name="description"
+      content="Contact for any questions about WWR or about services a customer may have.">
     <meta name="author" content="Kemonaho Christensen Esaie KOH">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
@@ -29,7 +30,7 @@
     <main>
         <div class="contact-grid">
             <div class="company-info">
-                <h2>White Water Rafting Company</h2>
+                <h1>White Water Rafting Company</h1>
                 <address>
                     123 Main River Street<br>
                     Kolob, California<br>
@@ -39,7 +40,7 @@
                 <div class="map">
                     <iframe
                       src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25060.07391957757!2d-122.09166647803936!3d38.26768668614678!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808516a5c765d525%3A0x34cf565b91bd9188!2sKolob%20Ct%2C%20Fairfield%2C%20CA%2094534%2C%20USA!5e0!3m2!1sen!2spl!4v1770763436525!5m2!1sen!2spl"
-                      width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                      width="400" height="300" allowfullscreen="" loading="lazy"
                       referrerpolicy="no-referrer-when-downgrade"></iframe>
 
                 </div>
@@ -56,11 +57,14 @@
 
                     <p>Purpose of Message:</p>
                     <div class="radio-group">
-                        <label><input type="radio" name="purpose" value="general" checked> General
+                        <label><input type="radio" id="purpose" name="purpose" value="general"
+                              checked> General
                             Inquiry</label>
-                        <label><input type="radio" name="purpose" value="reservation"> Reservation
+                        <label><input type="radio" id="purpose" name="purpose" value="reservation">
+                            Reservation
                             Question</label>
-                        <label><input type="radio" name="purpose" value="suggestion"> Website
+                        <label><input type="radio" id="purpose" name="purpose" value="suggestion">
+                            Website
                             Suggestion</label>
                     </div>
 
@@ -69,7 +73,8 @@
                       placeholder="Type your message here..." required></textarea>
 
                     <label class="checkbox-label">
-                        <input type="checkbox" name="newsletter"> Please subscribe me to the monthly
+                        <input type="checkbox" id="newsletter" name="newsletter"> Please subscribe
+                        me to the monthly
                         newsletter </label>
 
                     <button type="submit">Get In Touch!</button>
