--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -57,13 +57,15 @@
 
                     <p>Purpose of Message:</p>
                     <div class="radio-group">
-                        <label><input type="radio" id="purpose" name="purpose" value="general"
+                        <label><input type="radio" id="general" name="purpose" value="general"
                               checked> General
                             Inquiry</label>
-                        <label><input type="radio" id="purpose" name="purpose" value="reservation">
+                        <label><input type="radio" id="reservation" name="purpose"
+                              value="reservation">
                             Reservation
                             Question</label>
-                        <label><input type="radio" id="purpose" name="purpose" value="suggestion">
+                        <label><input type="radio" id="suggestion" name="purpose"
+                              value="suggestion">
                             Website
                             Suggestion</label>
                     </div>
