updated_layout_and_color_contrast

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -28,6 +28,8 @@
     </header>
 
     <main>
+        <h1>White Water Rafting Company</h1>
+
         <div class="contact-grid">
             <div class="company-info">
                 <address>
