--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -28,9 +28,8 @@
     </header>
 
     <main>
-        <h1>White Water Rafting Company</h1>
-
-        <div class="contact-grid">
+        <div class="company-header">
+            <h1>White Water Rafting Company</h1>
             <div class="company-info">
                 <address>
                     123 Main River Street<br>
@@ -38,50 +37,55 @@
                     +1 999 999 9999<br>
                     info@whitewater.com
                 </address>
-                <div class="map">
-                    <iframe
-                      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25060.07391957757!2d-122.09166647803936!3d38.26768668614678!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808516a5c765d525%3A0x34cf565b91bd9188!2sKolob%20Ct%2C%20Fairfield%2C%20CA%2094534%2C%20USA!5e0!3m2!1sen!2spl!4v1770763436525!5m2!1sen!2spl"
-                      width="400" height="300" allowfullscreen="" loading="lazy"
-                      referrerpolicy="no-referrer-when-downgrade"></iframe>
-
-                </div>
             </div>
-            <form action="#" method="get">
-                <fieldset>
-                    <!-- <legend>Get in Touch</legend> -->
+        </div>
 
+
+        <div class="contact-grid">
+            <div class="map">
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25060.07391957757!2d-122.09166647803936!3d38.26768668614678!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808516a5c765d525%3A0x34cf565b91bd9188!2sKolob%20Ct%2C%20Fairfield%2C%20CA%2094534%2C%20USA!5e0!3m2!1sen!2spl!4v1770763436525!5m2!1sen!2spl"
+                  width="400" height="300" allowfullscreen="" loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+
+            <form action="#" method="get">
+
+                <div class="form-row">
                     <label for="name">Name</label>
                     <input type="text" id="name" name="name" placeholder="Your Name" required>
+                </div>
 
+                <div class="form-row">
                     <label for="email">Email</label>
                     <input type="email" id="email" name="email" placeholder="Your Email" required>
+                </div>
 
-                    <p>Purpose of Message:</p>
-                    <div class="radio-group">
-                        <label><input type="radio" id="general" name="purpose" value="general"
-                              checked> General
-                            Inquiry</label>
-                        <label><input type="radio" id="reservation" name="purpose"
-                              value="reservation">
-                            Reservation
-                            Question</label>
-                        <label><input type="radio" id="suggestion" name="purpose"
-                              value="suggestion">
-                            Website
-                            Suggestion</label>
-                    </div>
 
-                    <label for="message">Message</label>
-                    <textarea name="message" id="message" rows="4"
-                      placeholder="Type your message here..." required></textarea>
+                <p>Purpose of Message:</p>
+                <div class="radio-group">
+                    <label><input type="radio" id="general" name="purpose" value="general" checked>
+                        General
+                        Inquiry</label>
+                    <label><input type="radio" id="reservation" name="purpose" value="reservation">
+                        Reservation
+                        Question</label>
+                    <label><input type="radio" id="suggestion" name="purpose" value="suggestion">
+                        Website
+                        Suggestion</label>
+                </div>
 
-                    <label class="checkbox-label">
-                        <input type="checkbox" id="newsletter" name="newsletter"> Please subscribe
-                        me to the monthly
-                        newsletter </label>
+                <label for="message">Message</label>
+                <textarea name="message" id="message" rows="4"
+                  placeholder="Type your message here..." required></textarea>
 
-                    <button type="submit">Get In Touch!</button>
-                </fieldset>
+                <label class="checkbox-label">
+                    <input type="checkbox" id="newsletter" name="newsletter"> Please subscribe
+                    me to the monthly
+                    newsletter </label>
+
+                <button type="submit">Get In Touch!</button>
+
             </form>
         </div>
 
